src/sass/components/_header-hero.scss
.header {
  width: 100%;
  padding-top: 12px;
  overflow: hidden;

  background-color: $main-color;

  @include tablet {
    padding-top: 20px;
  }

  @include desktop {
    padding: 0;
  }

  & .container {
    display: flex;
    align-items: center;
      overflow-y: scroll;
  }

  &__btn {
    min-width: 152px;
    right: calc(50% - 76px);

    @include tablet {
      display: none;
    }

  }

  &__tablet-btn {
    @media screen and (max-width: 767.5px) {
      display: none;
    }

    margin-left: 38px;
    min-width: 152px;
    @include desktop {
      margin-left: 0;
    }
  }
}

.nav {

  @media screen and (max-width: 1199.5px) {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    touch-action: none;
    z-index: 3;

    padding-top: 100px;
    transform: translateX(100%);
    transition: transform 350ms ease-in-out;

    text-align: center;

    background-color: $mobile-menu-green;

    overflow-y: scroll;
  }

  @media screen and (max-width: 767.5px) {
    padding-top: 100px;

    background-color: $tablet-menu-green;
  }


  &.is-open {
    transform: translateX(0);
  }

  &__list {

    @include desktop {
      display: flex;
      gap: 27px;

      margin-right: 247px;
    }
  }
  &__item {
    font-size: 32px;
    font-weight: 700;
    line-height: calc(39 / 32);
    font-family: $main-font;

    &:not(last-child) {
      margin-bottom: 32px;

      @include tablet {
        margin-bottom: 40px;
      }

      @include desktop {
        margin-bottom: 0;
      }
    }

    @include tablet {
      font-size: 48px;
      font-weight: 700;
      line-height: calc(59 / 48);
      letter-spacing: normal;
    }

    @include desktop {
      font-size: 16px;
      line-height: calc(20 / 16);
      padding-block: 40px;
    }
  }

  &__link {
    padding-block: 15px;
    transition: color 200ms ease-in-out;

    &:hover,
    &:focus {
      color: $black;

      @include desktop {
        color: $accent-color;
      }
    }
  }

  &__btn {
    display: flex;
    justify-content: center;

    margin-left: auto;

    border: none;
    background-color: transparent;
    z-index: 3;
    cursor: $cursor-dark;
    transform: translateX(0);

    fill: $white;

    transition: transform 250ms linear;

    @include desktop {
      display: none;
    }

    &.is-open {
      @include tablet {
        transform: translateX(190px);
        transition: transform 250ms linear;
      }
    }
  }

  &__btn.is-open &__close {
    transform: translateX(0);
  }

  &__btn.is-open &__open {
    transform: translateX(50px);
  }

  &__icon {
    width: 32px;
    height: 32px;
  }

  &__close {
    transform: translateX(-50px);
    transition: transform 350ms ease-in-out;
  }

  &__open {
    transform: translateX(0);
    transition: transform 350ms ease-in-out;
  }
}

.logo {
  &__icon {
    position: relative;
    width: 40px;
    height: 37px;
    fill: $accent-color;
    z-index: 55;

    @include tablet {
      width: 48px;
      height: 44px;
    }

    @include desktop {
      margin-right: 270px;
      width: 60px;
      height: 65px;
    }
  }
}

.hero {
  padding-top: 60px;

  background-color: $main-color;

  & .container {
    position: relative;
    height: 390px;

    @include tablet {
      height: 332px;
    }

    @include desktop {
      height: 564px;
    }
  }

  @include tablet {
    padding-top: 36px;
  }

  @include desktop {
    padding-top: 45px;
  }

  &__buttons {
    display: flex;
    gap: 18px;
    align-items: baseline;

    margin-bottom: 20px;

    @include tablet {
      margin-bottom: 28px;
    }

    @include desktop {
      margin-bottom: 42px;
      gap: 34px;
    }
  }

  &__heading {
    max-width: 247px;
    margin-bottom: 32px;

    font-size: 26px;
    font-weight: 400;
    letter-spacing: 0.04em;
    line-height: calc(33 / 26);
    font-family: $heading-font;
    text-transform: uppercase;
    &--accent {
      font-size: 34px;
      @include tablet {
        font-size: 24px;
      }
      @include desktop {
        font-size: 38px;
      }
    }

    @include tablet {
      max-width: 181px;
      margin-bottom: 20px;

      font-size: 18px;
      line-height: calc(23 / 18);
    }

    @include desktop {
      max-width: 367px;
      margin-bottom: 40px;

      font-size: 38px;
      line-height: calc(48 / 38);
    }
  }

  &__link {
    padding-block: 15px;

    text-decoration: underline;
    font-weight: 600;
    font-size: 8px;
    line-height: calc(10 / 8);
    letter-spacing: normal;

    color: $accent-color;
    transition: color 250ms ease-in-out;

    &:hover {
      color: $dark-green;
    }

    &:focus {
      color: $white;
    }

    @include desktop {
      font-size: 14px;
      line-height: calc(17 / 14);
    }
  }

  &__img {
    position: absolute;
    bottom: 0;
    right: 77px;

    width: 49%;
    max-width: 157px;

    filter: drop-shadow(0 0 30px rgba(252, 252, 252, 0.44))
      drop-shadow(0 0 20px rgba(252, 252, 252, 0.44));

    @include tablet {
      right: 80px;
      max-width: 270px;
    }

    @include desktop {
      right: 102px;
      max-width: 447px;
    }
  }

  &__dots {
    position: absolute;
    bottom: 0;
    right: 0;

    max-height: 50px;
    width: 100%;
    max-width: 320px;

    fill: $accent-color;
    pointer-events: none;

    @include tablet {
      display: none;
    }

    &--tablet {
      position: absolute;
      bottom: 0;
      left: 0;

      display: none;
      width: 768px;
      height: 67px;

      fill: $accent-color;
      z-index: 0;
      pointer-events: none;

      @include tablet-only {
        display: block;
      }
    }
    &--desktop {
      @media screen and (max-width: 1199px) {
        display: none;
      }
      position: absolute;
      bottom: 0;
      left: 0;

      width: 1200px;
      height: 384px;

      pointer-events: none;
    }
  }

  &__tablet {
    display: flex;
    gap: 33px;

    @include desktop {
      gap: 14px;
    }
  }
  &__plate {
    position: relative;
    width: 152px;

    z-index: 1;

    @include desktop {
      width: 225px;
      margin-bottom: 65px;
    }
    @media screen and (max-width: 767px) {
      display: none;
    }
  }
  &__text {
    width: 151px;

    font-weight: 400;
    font-family: $main-font;
    font-size: 12px;
    line-height: calc(17 / 12);
    letter-spacing: normal;

    @include desktop {
      width: 200px;
      font-size: 14px;
      line-height: calc(20 / 14);
    }
  }
  &__arrows {
    padding-block: 15px;
    display: flex;
    align-items: baseline;
    transition: padding-bottom 200ms linear;

    &:hover {
      padding-bottom: 11px;
    }
    &:hover .hero__arrow {
      width: 50px;
      height: 19px;
    }
    &:focus .hero__arrow {
      stroke-width: 2px;
    }
  }
  &__arrow {
    fill: $white;
    width: 40px;
    height: 15px;

    transition: width 200ms linear, height 200ms linear;
  }

  &__descr {
    margin: auto 0;
    padding-top: 27px;
    @media screen and (max-width: 767.5px) {
      display: none;
    }
  }
  &__numbers {
    position: absolute;
    top: -10px;
    right: 32px;

    display: none;

    text-align: right;

    font-family: $main-font;
    font-weight: 400;
    font-size: 8px;
    line-height: calc(10 / 8);
    letter-spacing: normal;

    @include tablet {
      display: block;
    }
    @include desktop {
      right: 16px;
      top: 0;
      font-size: 14px;
      line-height: calc(17 / 14);
    }

    &--mb {
      margin-bottom: 20px;

      @include desktop {
        margin-bottom: 16px;
      }
    }
  }

  &__number {
    display: block;

    margin-bottom: 4px;

    font-weight: 900;
    font-size: 28px;
    font-family: $main-font;
    letter-spacing: 0.04em;
    text-transform: uppercase;

    color: $black;

    @include desktop {
      font-size: 46px;
    }
  }
}

//to top btn
#myBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 999;
  @extend %btn;
  padding: 10px;

  background-color: $accent-color;
}

